# homic

./: README.MD  env.yml  install_bioconda_deps.sh  pip_reqs.txt  pyproject.toml  reqs.txt
.ipynb_checkpoints/: README-checkpoint.MD  env-checkpoint.yml  install_bioconda_deps-checkpoint.sh  pyproject-checkpoint.toml  reqs-checkpoint.txt
data/: SRR25456942_example_16SrRNAseq_data.fastq  readme.txt
data/.ipynb_checkpoints/: SRR25456942_example_gold_truth_species-checkpoint.txt
files/: 65sp.txt
files/.ipynb_checkpoints/: 16S_rr-checkpoint.fa
models/: model_1000000_totreads_11epochs_50batches_LSTM.keras  tra_encoder_1000000_totreads_11epochs_50batches_LSTM.h5
models/asfmic_16S/: model.keras  readme.txt  val_encoder.h5
models/gemic62m/: model.keras  readme.txt  val_encoder.h5
models/gemic63_16S/: model.keras  tra_encoder.h5
models/mixmic71_16S/: model.keras  readme.txt  tra_encoder.h5
models/spemic62m/: model_GRU.keras  readme.txt
models/spmic63_16S/: model.keras  readme.txt  tra_encoder.h5
tests/: dl_data_generator.py  dl_training_runner.py  e10_help.ipynb  e10_saturation_analysis.py  e10_saturation_analysis_v2.py  e1_simulate_data.py  e2_run_dl_training.py  e3_run_dl_benchmark_with_kraken2.py  e3_run_dl_evaluation.py  e3_run_dl_evaluation_with_kraken2-timeBenchmark.py  e3_run_dl_evaluation_with_kraken2.py  e4_run_dl_prediction.py  e5_run_kraken2.py  e6_taxa_assignment.py  e7_data_assembly.py  e7_data_assembly_human.py  e8_blast_analysis.ipynb  e8_blast_analysis_human.ipynb  e8_blast_analysis_human_correlation.ipynb  help.ipynb  keys_spec63.txt
(+57 files in other folders)
