[project]
name = "homic"
version = "2.0.1"
authors = [
  { name="Mateusz Garbulowski", email="mateusz.garbulowski@igp.uu.se" },
  { name="Britta Lötstedt" },
  { name="Sanja Vickovic" },
]
description = "Python package for HOst-MICrobiome (homic) spatial analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mategarb"
Issues = "https://github.com/mategarb"